feat: advertise sandbox terminal protocols
